--- a/taskmanager/main/templates/main/layout.html
+++ b/taskmanager/main/templates/main/layout.html
@@ -18,10 +18,10 @@
                         <h2 class="text-lg font-bold">LOGO</h2>
                     </a>
                     <div class="hidden lg:flex lg:gap-10">
-                    <a class="relative -my-2 -mx-3 rounded-lg px-3 py-2 text-sm text-gray-700 transition-colors delay-150 hover:text-gray-900 hover:delay-[0ms]" href="/">
+                    <a class="relative -my-2 -mx-3 rounded-lg px-3 py-2 text-sm text-gray-700 transition-colors delay-150 hover:text-gray-900 hover:delay-[0ms]" href="{% url 'home' %}">
                         <span class="relative z-10">Home</span>
                     </a>
-                    <a class="relative -my-2 -mx-3 rounded-lg px-3 py-2 text-sm text-gray-700 transition-colors delay-150 hover:text-gray-900 hover:delay-[0ms]" href="/about">
+                    <a class="relative -my-2 -mx-3 rounded-lg px-3 py-2 text-sm text-gray-700 transition-colors delay-150 hover:text-gray-900 hover:delay-[0ms]" href="{% url 'about' %}">
                         <span class="relative z-10">About Us</span>
                     </a>
                 </div>
